# app/Http/Requests/UpdateCustomerRequest.php
@@ -3,6 +3,7 @@
 namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
 
 class UpdateCustomerRequest extends FormRequest
 {
@@ -11,7 +12,7 @@ class UpdateCustomerRequest extends FormRequest
      */
     public function authorize(): bool
     {
-        return false;
+        return true;
     }
 
     /**
@@ -22,7 +23,12 @@ class UpdateCustomerRequest extends FormRequest
     public function rules(): array
     {
         return [
-            //
+            'firstname' => ['required','string','min:3','max:191',Rule::unique('customers', 'firstname')->ignore($this->customer)],
+            'lastname' => ['required','string','min:3','max:191',Rule::unique('customers', 'lastname')->ignore($this->customer)],
+            'date_of_birth' => ['required','date',Rule::unique('customers', 'date_of_birth')->ignore($this->customer)],
+            'email' =>  ['required','email', 'max:255',Rule::unique('customers', 'date_of_birth')->ignore($this->customer)],
+            'phonenumber' => 'nullable|phone:US,BE',
+            'bank_account' => 'required|string|max:255',
         ];
     }
 }
